--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -21,6 +21,18 @@
             android:onClick="goBack"
             android:layout_alignParentRight="true"/>
 
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/searchact"
+            android:background="@null"
+            android:src="@drawable/search_white"
+            android:layout_alignParentEnd="true"
+            android:onClick="goBusqueda"
+            android:layout_gravity="end"
+            android:paddingRight="20dp"
+            android:layout_alignParentRight="true"/>
+
     </android.support.v7.widget.Toolbar>
 
 </android.support.design.widget.AppBarLayout>
