--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -180,6 +180,17 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="5dp" />
 
+            <Button
+                android:text="Nuevo evento"
+                android:id="@+id/addEvento"
+                android:background="@drawable/boton_amarillo_custom"
+                android:layout_width="120dp"
+                android:layout_height="26dp"
+                android:onClick="addEvento"
+                android:layout_below="@+id/editarTags"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="10dp" />
+
 
         </RelativeLayout>
     </ScrollView>
