--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -30,6 +30,10 @@
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_manage"
                 android:title="Configuración" />
+            <item
+                android:id="@+id/cre_gru"
+                android:icon="@drawable/plus_sign_in_a_black_circle"
+                android:title="Añadir Grupo" />
         </menu>
     </item>
 
