--- a/app/src/main/res/layout/activity_editar_grupo.xml
+++ b/app/src/main/res/layout/activity_editar_grupo.xml
@@ -84,19 +84,6 @@
                 android:layout_alignParentStart="true"
                 android:layout_marginTop="15dp" />
 
-            <Button
-                android:text="@string/DEFAULT_EDITAR_GRUPO"
-                android:id="@+id/buttonAcceptar"
-                android:background="@drawable/botton_application"
-                android:layout_width="150dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="30dp"
-                android:radius="20dip"
-                android:layout_below="@+id/editorTagPrincipal"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:onClick="updateGrupo" />
-
             <TextView
                 android:layout_width="match_parent"
                 android:id="@+id/marcoContenido"
@@ -135,25 +122,18 @@
                 android:layout_alignTop="@+id/marcoContenido"
                 android:layout_alignParentStart="true" />
 
-            <EditText
-                android:layout_width="match_parent"
-                android:inputType="textPersonName"
-                android:hint="@string/ESCRIBE_TAG_PRINCIPAL_GRUPO"
-                android:ems="10"
-                android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:textSize="18sp"
-                android:textColorHint="#8a939d"
-                android:id="@+id/editorTagPrincipal"
-                android:layout_height="46dp"
-                android:background="#eceff1"
-                android:textStyle="normal"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="15dp"
+            <Button
+                android:text="@string/DEFAULT_EDITAR_GRUPO"
+                android:id="@+id/buttonAcceptar"
+                android:background="@drawable/botton_application"
+                android:layout_width="150dp"
+                android:layout_marginRight="10dp"
+                android:layout_height="30dp"
+                android:radius="20dip"
+                android:layout_marginTop="29dp"
+                android:onClick="updateGrupo"
                 android:layout_below="@+id/editorDescrGrupo"
-                android:layout_alignParentStart="true" />
+                android:layout_centerHorizontal="true" />
 
 
         </RelativeLayout>
