signout al navigation drawer

--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -42,6 +42,10 @@
                 android:id="@+id/help"
                 android:icon="@drawable/question_mark"
                 android:title="Help" />
+            <item
+                android:id="@+id/logout"
+                android:icon="@drawable/logout"
+                android:title="Logout" />
         </menu>
     </item>
 
