--- a/app/src/main/res/layout/activity_info_otro_usuario.xml
+++ b/app/src/main/res/layout/activity_info_otro_usuario.xml
@@ -46,7 +46,8 @@
                 android:layout_alignParentEnd="true"
                 android:textStyle="normal|bold"
                 android:textColor="#000"
-                android:layout_marginTop="6dp"/>
+                android:layout_marginTop="6dp"
+                android:textSize="24dp"/>
 
             <ListView
                 android:layout_width="match_parent"
