--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -39,18 +39,22 @@ android:layout_height="match_parent"
 
         <Button
             android:text="@string/DEFAULT_BOTON"
+            android:layout_marginLeft="10dp"
             android:id="@+id/button"
             android:background="@drawable/boton_amarillo_custom"
             android:bottomRightRadius="10dp"
             android:bottomLeftRadius="10dp"
             android:topLeftRadius="10dp"
             android:topRightRadius="10dp"
+            android:layout_marginBottom="10dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
             android:layout_weight="1"
             android:layout_alignParentTop="true"
             android:layout_alignParentEnd="true"
             android:layout_marginRight="5dp"
-            android:layout_height="25dp"
-            android:layout_width="70dp" />
+            android:layout_height="90px"
+            android:layout_width="wrap_content" />
 
         <TextView android:id="@+id/text2"
             android:layout_width="match_parent"
