--- a/app/src/main/res/layout/activity_perfil_usuario.xml
+++ b/app/src/main/res/layout/activity_perfil_usuario.xml
@@ -40,7 +40,9 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/buttonVerMiPerfil"
                 android:onClick="abrirGaleria"
+                android:background="@drawable/boton_amarillo_custom"
                 android:layout_above="@+id/correo"
+                android:paddingBottom="5dp"
                 android:layout_alignParentStart="true" />
 
             <Button
@@ -48,6 +50,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/button5"
+                android:paddingBottom="5dp"
+                android:background="@drawable/boton_amarillo_custom"
                 android:onClick="editarPreferencias" />
 
             <TextView
@@ -103,6 +107,8 @@
                 android:text="Guardar cambios"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="5dp"
+                android:background="@drawable/boton_amarillo_custom"
                 android:id="@+id/buttonSave"
                 android:onClick="guardarInfo"
                 />
@@ -111,7 +117,9 @@
                 android:text="Reiniciar contraseña"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/boton_amarillo_custom"
                 android:id="@+id/buttonRestart"
+                android:paddingBottom="5dp"
                 android:onClick="restartPassword"
             />
 
@@ -127,6 +135,7 @@
                 android:text="Button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@drawable/boton_amarillo_custom"
                 android:id="@+id/button6" />
 
             <Button
