--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -16,21 +16,15 @@
         ></include>
 
     <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/toolbar">
+        android:layout_width="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
+        android:layout_height="wrap_content">
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:orientation="vertical" >
-
-            <ImageView
-                android:layout_width="match_parent"
-                android:id="@+id/imagenGrupo"
-                android:layout_height="160dp"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentStart="true" />
+            android:orientation="vertical"
+            android:layout_height="fill_parent">
 
             <Button
                 android:text="@string/DEFAULT_SEGUIR"
@@ -64,7 +58,9 @@
                 android:layout_below="@+id/nombreGrupo"
                 android:layout_height="20dp"
                 android:background="#fff"
-                android:textStyle="normal|bold" />
+                android:textStyle="normal|bold"
+                android:layout_marginLeft="15dp"
+                android:layout_marginRight="15dp" />
 
             <TextView
                 android:layout_width="match_parent"
@@ -112,14 +108,6 @@
                 android:layout_alignStart="@+id/Horizontal"
                 android:layout_alignEnd="@+id/Horizontal" />
 
-            <ListView
-                android:layout_width="match_parent"
-                android:id="@+id/event"
-                android:layout_below="@+id/EventosTitulo"
-                android:layout_alignStart="@+id/EventosTitulo"
-                android:layout_height="155dp"
-                android:layout_alignEnd="@+id/EventosTitulo" />
-
             <HorizontalScrollView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -152,11 +140,16 @@
             </HorizontalScrollView>
 
             <Button
-                android:text="@string/ELIMINAR_GRUPO"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@android:color/holo_red_dark"
-                android:id="@+id/borrarGrupo" />
+                android:text="editar"
+                android:id="@+id/editar"
+                android:background="@drawable/boton_amarillo_custom"
+                android:layout_height="26dp"
+                android:onClick="editar"
+                android:layout_width="80dp"
+                android:layout_below="@+id/event"
+                android:layout_alignParentStart="true"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="10dp" />
 
             <Button
                 android:text="Editar tags"
@@ -165,20 +158,37 @@
                 android:layout_width="120dp"
                 android:layout_height="26dp"
                 android:onClick="editarTags"
-                android:layout_below="@+id/borrarGrupo"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="5dp" />
+                android:layout_marginLeft="110dp"
+                android:layout_marginEnd="21dp"
+                android:layout_alignBaseline="@+id/editar"
+                android:layout_alignBottom="@+id/editar"
+                android:layout_toStartOf="@+id/addEvento"
+                android:layout_marginBottom="10dp" />
 
             <Button
-                android:text="editar"
-                android:id="@+id/editar"
-                android:background="@drawable/boton_amarillo_custom"
-                android:layout_height="26dp"
-                android:onClick="editar"
-                android:layout_width="80dp"
+                android:text="@string/ELIMINAR_GRUPO"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@android:color/holo_red_dark"
+                android:id="@+id/borrarGrupo"
+                android:layout_marginTop="52dp"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentStart="true" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:id="@+id/imagenGrupo"
+                android:layout_height="160dp"
                 android:layout_below="@+id/borrarGrupo"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="5dp" />
+                android:layout_alignParentStart="true" />
+
+            <ListView
+                android:layout_width="match_parent"
+                android:id="@+id/event"
+                android:layout_below="@+id/EventosTitulo"
+                android:layout_alignStart="@+id/EventosTitulo"
+                android:layout_alignEnd="@+id/addEvento"
+                android:layout_height="120dp" />
 
             <Button
                 android:text="Nuevo evento"
@@ -187,9 +197,10 @@
                 android:layout_width="120dp"
                 android:layout_height="26dp"
                 android:onClick="addEvento"
-                android:layout_below="@+id/editarTags"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="10dp" />
+                android:layout_alignBaseline="@+id/editarTags"
+                android:layout_alignBottom="@+id/editarTags"
+                android:layout_alignEnd="@+id/EventosTitulo"
+                android:layout_marginBottom="10dp" />
 
 
         </RelativeLayout>
