--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -34,7 +34,8 @@
                 android:layout_height="26dp"
                 android:layout_above="@+id/descr"
                 android:layout_alignEnd="@+id/descr"
-                android:layout_marginBottom="55dp" />
+                android:layout_marginBottom="55dp"
+                android:onClick="seguirDejarDeSeguir" />
 
             <TextView
                 android:layout_width="match_parent"
