--- a/app/src/main/res/layout/activity_info_otro_usuario.xml
+++ b/app/src/main/res/layout/activity_info_otro_usuario.xml
@@ -89,6 +89,17 @@
                 android:textColor="#000"
                 android:layout_marginTop="6dp"/>
 
+            <Button
+                android:text="@string/DEFAULT_SEGUIR"
+                android:layout_width="wrap_content"
+                android:id="@+id/seguir"
+                android:background="@drawable/boton_amarillo_custom"
+                android:layout_height="26dp"
+                android:onClick="seguirNoSeguir"
+                android:layout_above="@+id/textNombreUsuario"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="14dp" />
+
         </RelativeLayout>
 
     </ScrollView>
