--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -28,7 +28,8 @@ android:layout_height="match_parent"
     >
 
     <TextView android:id="@+id/text1" android:layout_width="match_parent"
-        android:layout_height="wrap_content" android:text="primera linea"
+        android:layout_height="wrap_content"
+        android:text="@string/primera_linea"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginTop="5dp" />
