--- a/app/src/main/res/layout/activity_crear_usuario.xml
+++ b/app/src/main/res/layout/activity_crear_usuario.xml
@@ -34,19 +34,19 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Correo"/>
+                    android:text="@string/DEFAULT_CORREO"/>
 
                 <EditText
                     android:id="@+id/correo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="alguien@correo.com"
+                    android:hint="example@email.com"
                     android:inputType="textEmailAddress"
                     />
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Contraseña"/>
+                    android:text="@string/DEFAULT_PASSWORD"/>
                 <EditText
                     android:id="@+id/pass"
                     android:layout_width="match_parent"
@@ -56,7 +56,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Repite contraseña"/>
+                    android:text="@string/REPITE_PASSWORD"/>
                 <EditText
                     android:id="@+id/repepass"
                     android:layout_width="match_parent"
@@ -66,7 +66,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nombre de usuario"/>
+                    android:text="@string/DEFAULT_NOMBRE_USUARIO"/>
                 <EditText
                     android:id="@+id/username"
                     android:layout_width="match_parent"
