--- a/app/src/main/res/layout/activity_indicar_tags.xml
+++ b/app/src/main/res/layout/activity_indicar_tags.xml
@@ -25,7 +25,7 @@
             android:layout_below="@+id/inputBusqueda" />
 
         <Button
-            android:text="Hecho!"
+            android:text="@string/DEFAULT_HECHO"
             android:id="@+id/button4"
             android:background="@drawable/boton_amarillo_custom"
             android:layout_height="50dp"
@@ -37,7 +37,7 @@
             android:onClick="actualizarPreferencias" />
 
         <TextView
-            android:text="Recuerda que debes escoger un mínimo de 3 tags"
+            android:text="@string/RECORDATORIO_3_TAGS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/tagsMinimos"
@@ -49,7 +49,7 @@
             android:paddingBottom="10dp" />
 
         <TextView
-            android:text="Si no encuentras el tag adecuado para definir tu grupo no dudes en crearlo!"
+            android:text="@string/RECORDATORIO_CREAR_TAGS"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/textoNuevo"
@@ -68,13 +68,13 @@
             android:id="@+id/inputBusqueda"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:hint="Escribe el nombre del tag"
+            android:hint="@string/ESCRIBE_EL_NOMBRE_TAG"
             android:layout_below="@+id/textoNuevo"
             android:layout_alignEnd="@+id/crearTag"
             android:layout_marginTop="15dp" />
 
         <Button
-            android:text="nuevo tag"
+            android:text="@string/NUEVO_TAG"
             android:id="@+id/crearTag"
             android:background="@drawable/boton_amarillo_custom"
             android:layout_height="50dp"
