--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Correo"
+                    android:text="@string/DEFAULT_CORREO"
                     android:textStyle="normal|bold"
                     android:textColor="#000"
                     android:textSize="18sp"/>
@@ -41,7 +41,7 @@
                     android:id="@+id/correo"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:hint="alguien@correo.com"
+                    android:hint="@string/DEFAULT_EXAMPLE_EMAIL"
                     android:inputType="textEmailAddress"
                     android:background="@color/tw__solid_white"
                     android:layout_marginTop="6dp"
@@ -49,7 +49,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Contraseña"
+                    android:text="@string/DEFAULT_PASSWORD"
                     android:textStyle="normal|bold"
                     android:textColor="#000"
                     android:layout_marginTop="6dp"
@@ -77,7 +77,7 @@
                 android:layout_gravity="center"/>
 
             <Button
-                android:text="Registrarme"
+                android:text="@string/registrarme"
                 android:layout_width="150dp"
                 android:layout_marginRight="10dp"
                 android:layout_height="30dp"
