--- a/app/src/main/res/layout/dialog_nuevo_tag.xml
+++ b/app/src/main/res/layout/dialog_nuevo_tag.xml
@@ -23,7 +23,7 @@
         android:hint="Escribe el nombre del tag" />
 
     <Button
-        android:text="Crear"
+        android:text="@string/DEFAULT_CREAR"
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:id="@+id/newTag"
