--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -38,122 +38,224 @@
                 android:textStyle="normal|bold"
                 android:layout_marginTop="5dp" />
 
-            <TextView
-                android:text="@string/DEFAULT_DESCRIPCION"
-                android:layout_width="match_parent"
-                android:id="@+id/descr"
-                android:fontFamily="sans-serif"
-                android:textSize="16sp"
-                android:textColor="#000"
-                android:layout_below="@+id/nombreGrupo"
-                android:layout_height="20dp"
-                android:background="#fff"
-                android:textStyle="normal|bold"
-                android:layout_marginLeft="15dp"
-                android:layout_marginRight="15dp" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:id="@+id/descripcion"
-                android:fontFamily="sans-serif"
-                android:textSize="16sp"
-                android:textColor="#000"
-                android:layout_below="@+id/descr"
-                android:paddingTop="5dp"
-                android:scrollbars = "vertical"
-                android:background="#fff"
-                android:layout_height="match_parent"
-                android:layout_alignStart="@+id/descr"
-                android:layout_alignEnd="@+id/descr" />
-
-            <TextView
-                android:text="@string/DEFAULT_ETIQUETAS"
-                android:layout_width="match_parent"
-                android:id="@+id/etiquetas"
-                android:fontFamily="sans-serif"
-                android:textSize="16sp"
-                android:textColor="#000"
-                android:scrollbars="vertical"
-                android:background="#fff"
-                android:layout_below="@+id/descripcion"
-                android:textStyle="normal|bold"
-                android:layout_marginTop="10dp"
-                android:layout_height="21dp"
-                android:layout_alignStart="@+id/Horizontal"
-                android:layout_alignEnd="@+id/descripcion" />
-
-            <TextView
-                android:text="@string/DEFAULT_EVENTOS"
-                android:layout_width="match_parent"
-                android:id="@+id/EventosTitulo"
-                android:fontFamily="sans-serif"
-                android:textSize="16sp"
-                android:textColor="#000"
-                android:scrollbars="vertical"
-                android:background="#fff"
-                android:textStyle="normal|bold"
-                android:layout_height="24dp"
-                android:layout_below="@+id/Horizontal"
-                android:layout_marginTop="7dp"
-                android:layout_alignStart="@+id/Horizontal"
-                android:layout_alignEnd="@+id/Horizontal" />
-
-            <HorizontalScrollView
+            <RelativeLayout
+                android:id="@+id/layoutDescripcion"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="#fff"
-                android:id="@+id/Horizontal"
-                android:scrollbars="none"
-                android:layout_below="@+id/etiquetas"
-                android:layout_alignEnd="@+id/descripcion"
-                android:layout_alignStart="@+id/descripcion">
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/nombreGrupo"
+                android:background="#fff">
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
+                <TextView
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="7dp"
-                    android:id="@+id/Tags"
-                    android:layout_marginBottom="7dp">
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/DEFAULT_DESCRIPCION"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:id="@+id/textDescripcion"/>
 
-                    <TextView
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="5dp"
+                    android:paddingBottom="5dp"
+                    android:textSize="16sp"
+                    android:id="@+id/descripcion"
+                    android:textColor="@color/background_material_dark"
+                    android:layout_alignParentBottom="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_below="@+id/textDescripcion"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutTags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/layoutDescripcion"
+                android:background="#fff">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/DEFAULT_ETIQUETAS"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:id="@+id/textEtiquetas"/>
+
+                <HorizontalScrollView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="#fff"
+                    android:id="@+id/Horizontal"
+                    android:scrollbars="none"
+                    android:layout_below="@+id/textEtiquetas"
+                    android:layout_marginRight="10dp">
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text=""
-                        android:paddingBottom="2dp"
-                        android:paddingLeft="3dp"
-                        android:paddingRight="3dp"
-                        android:paddingTop="2dp"
-                        android:id="@+id/Primero" />
+                        android:layout_marginTop="7dp"
+                        android:id="@+id/Tags"
+                        android:layout_marginBottom="7dp">
 
-                </LinearLayout>
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text=""
+                            android:layout_marginLeft="10dp"
+                            android:paddingBottom="2dp"
+                            android:paddingLeft="3dp"
+                            android:paddingRight="3dp"
+                            android:paddingTop="2dp"
+                            android:id="@+id/Primero" />
 
-            </HorizontalScrollView>
+                    </LinearLayout>
 
-            <Button
-                android:text="@string/DEFAULT_EDITAR"
-                android:id="@+id/editar"
-                android:background="@drawable/boton_amarillo_custom"
-                android:layout_height="26dp"
-                android:onClick="editar"
-                android:layout_width="80dp"
+                </HorizontalScrollView>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutEventos"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="10dp"
+                android:layout_below="@+id/layoutTags"
+                android:background="#fff">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/DEFAULT_EVENTOS"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:id="@+id/textEventos"/>
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutEditar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
                 android:layout_below="@+id/event"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="10dp" />
+                android:background="#fff"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
 
-            <Button
-                android:text="@string/editar_tags"
-                android:id="@+id/editarTags"
-                android:background="@drawable/boton_amarillo_custom"
-                android:layout_width="120dp"
-                android:layout_height="26dp"
-                android:onClick="editarTags"
-                android:layout_marginLeft="110dp"
-                android:layout_marginEnd="21dp"
-                android:layout_alignBaseline="@+id/editar"
-                android:layout_alignBottom="@+id/editar"
-                android:layout_toStartOf="@+id/addEvento"
-                android:layout_marginBottom="10dp" />
+                <Button
+                    android:text="@string/DEFAULT_EDITAR"
+                    android:id="@+id/editar"
+                    android:background="@drawable/botton_application"
+                    android:layout_width="120dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="30dp"
+                    android:onClick="editar"
+                    android:radius="20dip"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/DEFAULT_EDITAR_GRUPO"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:id="@+id/textEditar"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutEditarTags"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layoutEditar"
+                android:background="#fff"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
+                <Button
+                    android:text="@string/editar_tags"
+                    android:id="@+id/editarTags"
+                    android:background="@drawable/botton_application"
+                    android:layout_width="120dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="30dp"
+                    android:onClick="editarTags"
+                    android:radius="20dip"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/DEFAULT_EDITAR_TAGS"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:id="@+id/textAssistencia"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
+
+            <RelativeLayout
+                android:id="@+id/layoutCrearEvento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/layoutEditarTags"
+                android:background="#fff"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp">
+
+                <Button
+                    android:text="@string/DEFAULT_CREAR_EVENTO"
+                    android:id="@+id/addEvento"
+                    android:background="@drawable/botton_application"
+                    android:layout_width="120dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_height="30dp"
+                    android:onClick="addEvento"
+                    android:radius="20dip"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_marginLeft="10dp"
+                    android:text="@string/DEFAULT_CREAR_EVENTO"
+                    android:textSize="16sp"
+                    android:textStyle="normal|bold"
+                    android:textColor="#000"
+                    android:id="@+id/textCrearEvento"
+                    android:layout_height="match_parent"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true" />
+
+            </RelativeLayout>
 
             <Button
                 android:text="@string/ELIMINAR_GRUPO"
@@ -168,22 +270,8 @@
             <ListView
                 android:layout_width="match_parent"
                 android:id="@+id/event"
-                android:layout_below="@+id/EventosTitulo"
-                android:layout_alignStart="@+id/EventosTitulo"
-                android:layout_alignEnd="@+id/addEvento"
+                android:layout_below="@+id/layoutEventos"
                 android:layout_height="120dp" />
-
-            <Button
-                android:text="@string/nuevo_evento"
-                android:id="@+id/addEvento"
-                android:background="@drawable/boton_amarillo_custom"
-                android:layout_width="120dp"
-                android:layout_height="26dp"
-                android:onClick="addEvento"
-                android:layout_alignBaseline="@+id/editarTags"
-                android:layout_alignBottom="@+id/editarTags"
-                android:layout_alignEnd="@+id/EventosTitulo"
-                android:layout_marginBottom="10dp" />
 
             <ImageView
                 android:layout_width="match_parent"
@@ -199,8 +287,9 @@
                 android:background="@drawable/boton_amarillo_custom"
                 android:layout_height="26dp"
                 android:onClick="seguirDejarDeSeguir"
-                android:layout_above="@+id/descr"
-                android:layout_alignEnd="@+id/descr"
+                android:layout_above="@+id/layoutDescripcion"
+                android:layout_alignEnd="@+id/layoutDescripcion"
+                android:layout_marginRight="10dp"
                 android:layout_marginBottom="47dp" />
 
 
