--- a/app/src/main/res/layout/activity_editar_grupo.xml
+++ b/app/src/main/res/layout/activity_editar_grupo.xml
@@ -5,14 +5,18 @@
     android:id="@+id/activity_crear_grupo"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.pes12.pickanevent.view.EditarGrupoActivity">
+    tools:context="com.pes12.pickanevent.view.EditarGrupoActivity"
+    android:background="#bfffc2">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar"
+        ></include>
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#bfffc2"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true">
+        android:layout_below="@+id/toolbar" >
 
         <RelativeLayout
             android:layout_width="fill_parent"
@@ -27,113 +31,145 @@
                 android:layout_alignParentStart="true"
                 android:onClick="abrirGaleria"/>
 
-
             <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:orientation="vertical"
-                android:layout_below="@+id/editorDescr"
-                android:layout_marginTop="10dp"
-                android:id="@+id/relative">
-
-            </RelativeLayout><![CDATA[
-
-
-
-
-
-
-
-            android:layout_marginRight="25dp" />
-
-
-
-
-
-
-
-
-
-
-
-
-            ]]>
-
-            <EditText
-                android:layout_width="match_parent"
-                android:inputType="textPersonName"
-                android:hint="@string/ESCRIBE_DESCRIPCION_GRUPO"
-                android:ems="10"
-                android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:paddingTop="5dp"
-                android:textSize="18sp"
-                android:textColorHint="#8a939d"
-                android:id="@+id/editorDescrGrupo"
-                android:layout_height="184dp"
-                android:background="#eceff1"
-                android:textStyle="normal"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:elevation="1dp"
-                android:layout_alignWithParentIfMissing="false"
-                android:layout_centerInParent="false"
-                android:gravity="top"
-                android:layout_below="@+id/editorNGrupo"
-                android:layout_alignParentStart="true"
-                android:layout_marginTop="15dp" />
-
-            <TextView
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:id="@+id/marcoContenido"
                 android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:textSize="16sp"
                 android:textColor="#000"
-                android:paddingTop="5dp"
-                android:scrollbars="vertical"
                 android:background="#fff"
                 android:layout_marginLeft="15dp"
                 android:layout_marginRight="15dp"
-                android:layout_marginTop="26dp"
+                android:layout_marginTop="10dp"
                 android:layout_below="@+id/imagenGrupo"
-                android:layout_centerHorizontal="true"
-                android:layout_height="375dp" />
+                android:layout_height="wrap_content" >
 
-            <EditText
-                android:layout_width="match_parent"
-                android:inputType="textPersonName"
-                android:hint="@string/ESCRIBE_NOMBRE_GRUPO"
-                android:ems="10"
-                android:fontFamily="sans-serif"
-                android:paddingLeft="5dp"
-                android:paddingRight="5dp"
-                android:textSize="18sp"
-                android:textColorHint="#8a939d"
-                android:id="@+id/editorNGrupo"
-                android:layout_height="46dp"
-                android:background="#eceff1"
-                android:textStyle="normal"
-                android:layout_marginLeft="25dp"
-                android:layout_marginRight="25dp"
-                android:layout_marginTop="16dp"
-                android:layout_alignTop="@+id/marcoContenido"
-                android:layout_alignParentStart="true" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:inputType="textMultiLine"
+                    android:hint="@string/ESCRIBE_DESCRIPCION_GRUPO"
+                    android:ems="10"
+                    android:fontFamily="sans-serif"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:paddingTop="10dp"
+                    android:textSize="18sp"
+                    android:textColorHint="#8a939d"
+                    android:id="@+id/editorDescrGrupo"
+                    android:layout_height="184dp"
+                    android:background="#eceff1"
+                    android:textStyle="normal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_below="@+id/editorNGrupo"
+                    android:layout_marginTop="10dp"
+                    android:elevation="1dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_alignWithParentIfMissing="false"
+                    android:layout_centerInParent="false"
+                    android:layout_centerVertical="false"
+                    android:gravity="top"/>
 
-            <Button
-                android:text="@string/DEFAULT_EDITAR_GRUPO"
-                android:id="@+id/buttonAcceptar"
-                android:background="@drawable/botton_application"
-                android:layout_width="150dp"
-                android:layout_marginRight="10dp"
-                android:layout_height="30dp"
-                android:radius="20dip"
-                android:layout_marginTop="29dp"
-                android:onClick="updateGrupo"
-                android:layout_below="@+id/editorDescrGrupo"
-                android:layout_centerHorizontal="true" />
+                <EditText
+                    android:layout_width="match_parent"
+                    android:inputType="textPersonName"
+                    android:hint="@string/ESCRIBE_NOMBRE_GRUPO"
+                    android:ems="10"
+                    android:fontFamily="sans-serif"
+                    android:paddingLeft="5dp"
+                    android:paddingRight="5dp"
+                    android:textSize="18sp"
+                    android:textColorHint="#8a939d"
+                    android:id="@+id/editorNGrupo"
+                    android:layout_height="46dp"
+                    android:background="#eceff1"
+                    android:textStyle="normal"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginTop="10dp" />
+
+                <RelativeLayout
+                    android:id="@+id/layoutTags"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:layout_below="@+id/editorDescrGrupo"
+                    android:background="#fff"
+                    android:layout_marginLeft="10dp"
+                    android:layout_marginRight="10dp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="40dp"
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="5dp"
+                        android:text="@string/DEFAULT_ETIQUETAS"
+                        android:textSize="16sp"
+                        android:textStyle="normal|bold"
+                        android:textColor="#000"
+                        android:id="@+id/textEtiquetas"/>
+
+                    <HorizontalScrollView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="#fff"
+                        android:id="@+id/Horizontal"
+                        android:scrollbars="none"
+                        android:layout_below="@+id/textEtiquetas"
+                        android:layout_marginRight="10dp">
+
+                        <LinearLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="7dp"
+                            android:id="@+id/Tags"
+                            android:layout_marginBottom="7dp">
+
+                            <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:text=""
+                                android:layout_marginLeft="10dp"
+                                android:paddingBottom="2dp"
+                                android:paddingLeft="3dp"
+                                android:paddingRight="3dp"
+                                android:paddingTop="2dp"
+                                android:id="@+id/Primero" />
+
+                        </LinearLayout>
+
+                    </HorizontalScrollView>
+
+                    <Button
+                        android:text="@string/editar_tags"
+                        android:id="@+id/editarTags"
+                        android:background="@drawable/botton_application"
+                        android:layout_width="120dp"
+                        android:layout_alignParentTop="true"
+                        android:layout_alignParentEnd="true"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:layout_marginTop="10dp"
+                        android:layout_height="30dp"
+                        android:onClick="editarTags"
+                        android:radius="20dip"/>
+
+                </RelativeLayout>
+
+                <Button
+                    android:text="@string/DEFAULT_EDITAR_GRUPO"
+                    android:id="@+id/buttonAcceptar"
+                    android:background="@drawable/botton_application"
+                    android:layout_width="150dp"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="15dp"
+                    android:layout_height="30dp"
+                    android:radius="20dip"
+                    android:layout_marginTop="15dp"
+                    android:onClick="updateGrupo"
+                    android:layout_below="@+id/layoutTags"
+                    android:layout_centerHorizontal="true" />
+
+            </RelativeLayout>
 
 
         </RelativeLayout>
