--- a/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
+++ b/app/src/main/res/menu/activity_navigation_drawer_drawer.xml
@@ -26,10 +26,10 @@
                 android:id="@+id/nav_share"
                 android:icon="@drawable/ic_account_circle_black_24dp"
                 android:title="Perfil" />
-            <item
+            <!--<item
                 android:id="@+id/nav_send"
                 android:icon="@drawable/ic_menu_manage"
-                android:title="Configuración" />
+                android:title="Configuración" /> -->
             <item
                 android:id="@+id/cre_gru"
                 android:icon="@drawable/plus_sign_in_a_black_circle"
