canvis de layout vistes

--- a/app/src/main/res/layout/activity_buscar_evento.xml
+++ b/app/src/main/res/layout/activity_buscar_evento.xml
@@ -112,14 +112,24 @@
         android:layout_width="match_parent"
         android:layout_height="350dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="7.0sp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="7dp"/>
 
     <ListView
         android:id="@+id/lista2"
         android:layout_width="match_parent"
         android:layout_height="265dp"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="7.0sp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        android:layout_marginTop="7dp"/>
 
     <CalendarView
         android:layout_width="match_parent"
