--- a/app/src/main/res/layout/activity_ver_info_grupo.xml
+++ b/app/src/main/res/layout/activity_ver_info_grupo.xml
@@ -269,7 +269,12 @@
                 android:layout_width="match_parent"
                 android:id="@+id/event"
                 android:layout_below="@+id/layoutEventos"
-                android:layout_height="120dp" />
+                android:layout_height="120dp"
+                android:divider="@android:color/transparent"
+                android:dividerHeight="7.0sp"
+                android:layout_marginLeft="5dp"
+                android:layout_marginRight="5dp"
+                android:layout_marginTop="5dp"/>
 
             <ImageView
                 android:layout_width="match_parent"
@@ -289,7 +294,6 @@
                 android:layout_alignEnd="@+id/layoutDescripcion"
                 android:layout_marginRight="10dp"
                 android:layout_marginBottom="47dp" />
-
 
         </RelativeLayout>
     </ScrollView>
