--- a/app/src/main/res/layout/vista_adapter_lista.xml
+++ b/app/src/main/res/layout/vista_adapter_lista.xml
@@ -2,8 +2,8 @@
 <android.support.v7.widget.CardView android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 xmlns:android="http://schemas.android.com/apk/res/android">
+
     <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
         android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -65,7 +65,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
                     android:layout_width="wrap_content" />
 
                 <TextView android:id="@+id/text2"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="4dp"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="@string/DEFAULT_SEGUNDA_LINEA"
@@ -73,7 +73,7 @@ xmlns:android="http://schemas.android.com/apk/res/android">
                     android:layout_marginRight="75dp"
                     android:layout_alignParentTop="true"
                     android:layout_alignParentStart="true"
-                    android:layout_alignBottom="@+id/button" />
+                    android:layout_alignParentBottom="true" />
             </RelativeLayout>
 
         </LinearLayout>
