Data al Calendar a editar evento

--- a/app/src/main/res/layout/activity_editar_evento.xml
+++ b/app/src/main/res/layout/activity_editar_evento.xml
@@ -214,7 +214,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:inputType="textPersonName"
-                    android:hint="@string/PRIMER_DIA"
+                    android:text="@string/PRIMER_DIA"
                     android:ems="10"
                     android:cursorVisible="true"
                     android:focusable="false"
@@ -223,10 +223,9 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:textSize="18sp"
-                    android:textColorHint="#8a939d"
                     android:id="@+id/editorFecha"
                     android:layout_height="46dp"
-                    android:background="#eceff1"
+                    android:background="#FFF"
                     android:textStyle="normal"
                     android:layout_marginTop="10dp"
                     android:layout_below="@+id/editorLugar"
@@ -236,7 +235,7 @@
                 <EditText
                     android:layout_width="match_parent"
                     android:inputType="textPersonName"
-                    android:hint="@string/ULTIMO_DIA"
+                    android:text="@string/ULTIMO_DIA"
                     android:ems="10"
                     android:cursorVisible="false"
                     android:focusable="false"
@@ -245,10 +244,9 @@
                     android:paddingLeft="5dp"
                     android:paddingRight="5dp"
                     android:textSize="18sp"
-                    android:textColorHint="#8a939d"
                     android:id="@+id/editorFechaFinal"
                     android:layout_height="46dp"
-                    android:background="#eceff1"
+                    android:background="#FFF"
                     android:textStyle="normal"
                     android:layout_marginTop="10dp"
                     android:layout_below="@+id/calendarView"
